test: add repl pair connect unit test. add one slot base unit test.